# headshotbox

./: .bowerrc  .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  bower.json  build-travis.sh  build.py  get-demoinfogo.py  movie.md  project.clj
.github/workflows/: build.yml  release.yml
cs2-demo/: Cargo.toml
cs2-demo/proto/: README.md  cs_gameevents.proto  cstrike15_usermessages.proto  gameevents.proto  netmessages.proto  networkbasetypes.proto  te.proto  usermessages.proto
cs2-demo/src/: demo_command.rs  entity.rs  error.rs  game_event.rs  lib.rs  message.rs  packet.rs  read.rs  send_tables.rs  string_table.rs  testdata.rs  visit.rs
cs2-demo/src/entity/: class.rs  decoder.rs  fieldpath.rs  path_name.rs  property.rs  send_tables.rs
cs2-demo/src/game_event/: de.rs
cs2-demo/src/testdata/: CDemoStringTables.binpb  CSVCMsg_CreateStringTable.binpb  CSVCMsg_UpdateStringTable.binpb  cdemoclassinfo.binpb  cdemosendtables.binpb  packetentities.binpb
csdemoparser/: Cargo.toml  README.md
csdemoparser/src/: cs2.rs  csgo.rs  demoinfo.rs  entity.rs  game_event.rs  geometry.rs  last_jump.rs  lib.rs  main.rs  string_table.rs
csdemoparser/src/csgo/: game_event.rs
csdemoparser/src/entity/: serverclass.rs
csdemoparser/src/game_event/: de.rs
csgo-demo/: Cargo.toml  build.rs
csgo-demo/proto/: cstrike15_usermessages.proto  netmessages.proto
csgo-demo/src/: command.rs  console_command.rs  data_table.rs  entity.rs  error.rs  header.rs  lib.rs  message.rs  packet.rs  proto.rs  read_to_terminator.rs  string_table.rs  user_command.rs
csgo-demo/src/entity/: serverclass.rs
demo-format/: Cargo.toml
demo-format/src/: lib.rs  read.rs
frontend/: .gitignore  README.md  angular-cli.json  package.json
frontend/src/: img  index.html  styles.css
frontend/src/app/: api.service.spec.ts  api.service.ts  app.component.html  app.component.spec.ts  app.module.ts  numeric.pipe.spec.ts  numeric.pipe.ts  timestamp.pipe.spec.ts  timestamp.pipe.ts
frontend/src/app/datepicker/: datepicker.component.html  datepicker.component.ts
frontend/src/app/demo-filters/: demo-filters.component.html  demo-filters.component.spec.ts  demo-filters.component.ts
frontend/src/app/dropdown/: dropdown.component.html  dropdown.component.ts
frontend/src/app/navbar/: navbar.component.css  navbar.component.html  navbar.component.ts
frontend/src/app/player-list/: player-list.component.css  player-list.component.html  player-list.component.spec.ts  player-list.component.ts
frontend/src/app/player-stats/: player-stats.component.css  (+3 more)
frontend/src/environments/: environment.prod.ts  environment.ts
parsetest/: Cargo.toml
parsetest/src/: diff.rs  main.rs
protosrc/: Cstrike15Gcmessages.java  Steammessages.java
protosrc/google/protobuf/: Descriptor.java
resources/proto/: cstrike15_gcmessages.proto  steammessages.proto
resources/public/: .gitignore  hltv_rating.html  hsbox-dark.css  hsbox-light.css  hsbox.css  index.html
resources/public/js/: app.js  controllers.js  themer.js
resources/public/oldui/: hsbox-dark.css
resources/public/templates/: banned.html  charts.html  demo.html  demo_log.html  demos.html  navbar.html  player.html  player_list.html  search_round.html  search_round_top.html  settings.html  weapon_stats.html
resources/sql/: create.sql  migrate_1_to_2.sql  migrate_3_to_4.sql
src/: logo.xcf
src/hsbox/: core.clj  db.clj  demo.clj  env.clj  handler.clj  indexer.clj  launch.clj  movie.clj  mynotify.clj  stats.clj  steamapi.clj  util.clj  version.clj
src/hsbox/java/: SysTrayIcon.java
src/newui/: .env  .env.example  .eslintrc.cjs  .gitignore  LICENSE.md  README.md  package-lock.json  package.json  postcss.config.cjs  quasar.config.js  tailwind.config.js  tsconfig.json
(+59 files in other folders)
