[package]
name = "csdemoparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracing = ["dep:tracing-subscriber"]

[dependencies]
anyhow = "1.0"
bitstream-io.workspace = true
byteorder = "1.4"
csgo-demo = { path = "../csgo-demo" }
cs2-demo = { path = "../cs2-demo" }
demo-format = { path = "../demo-format" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true}

[dev-dependencies]
assert-json-diff = "2.0.2"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
