[package]
name = "parsetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.0", features = ["derive"] }
console = "0.15.7"
glob = "0.3.1"
indicatif = { version = "0.17.3", features = ["rayon"] }
once_cell = "1.17.2"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
